@@ -1,3 +1,8 @@
+2004-04-29  Bernie Solomon  <bernard@ugsolutions.com>
+
+	* ppc/tramp.c: use sizeof (stackval), fix
+	delegate tramp frame layout for Apple
+
 2004-04-26  David Waite <mass@akuma.org>
 
 	* unknown.c: modify to have content for defined platforms (to
